# patika_polkadot

./: customSpec.json  customSpecRaw.json
.github/workflows/: release-50_publish-docker-release.yml  release-51_publish-docker-manual.yml
cli/: Cargo.toml
node/: Cargo.toml
node/malus/: Cargo.toml
node/src/: chain_spec.rs
pallets/template/src/: lib.rs
parachain/test-parachains/adder/collator/: Cargo.toml
parachain/test-parachains/undying/collator/: Cargo.toml
rpc/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
utils/generate-bags/: Cargo.toml
utils/remote-ext-tests/bags-list/: Cargo.toml
utils/staking-miner/: Cargo.toml
