[package]
name = "polkadot-voter-bags"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.1.14", features = ["derive"] }

generate-bags = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }

westend-runtime = { path = "../../runtime/westend" }
kusama-runtime = { path = "../../runtime/kusama" }
polkadot-runtime = { path = "../../runtime/polkadot" }
